@@ -1,3 +1,6 @@
+2001-01-17  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
+	* actors.cc, conversation.cc: fixed 'male avatar has female face' bug
+
 2001-01-17  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* exult.cc: Fixed restart problem in Trinsic.
